--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,26 +10,28 @@ body{
 .navbar{
     display: flex;
     justify-content: space-between;
-    margin: 0 20px;
+    margin: 0 20px 40px 20px;
     border-bottom: solid 1px aliceblue;
 }
 .navbar ul{
     display: flex;
+    justify-content: space-evenly;
     list-style: none;
 }
 .navbar ul li a{
     margin: 0 30px;
     text-decoration: none;
     color: aliceblue;
+    padding: 5px;
 }
 .navbar ul li{
     margin: 10px;
 }
 .navbar ul li a:hover{
     border: solid 1px aliceblue;
-    box-shadow: inset 0 0 10px aliceblue;
-    padding: 5px 5px;
+    box-shadow: 0 0 5px rgb(235, 198, 14);
     border-radius: 20px;   
+    
 }
 
 /* LOGIN PAGE */
@@ -129,4 +131,118 @@ body{
 .RegisterA a{ 
     text-decoration: none;
     color: aliceblue;
+}
+
+/* HOME PAGE */
+.welcome{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80vh;
+}
+.image img{
+    width: 500px;
+}
+.welcome h1{
+    font-size: 50px;
+    color: aliceblue;
+    font-family: monospace;
+}
+.welcome p{
+    font-size: 20px;
+    color: aliceblue;
+    font-family: monospace;
+    width: 400px;
+    margin-bottom: 50px;
+}
+.welcome a{
+    text-decoration: none;
+    color: aliceblue;
+    padding: 10px 20px;
+    border: solid 1px aliceblue;
+    border-radius: 5px;
+    font-size: 20px;
+    border-radius: 20px;
+}
+.welcome a span{
+    margin-left: 100px;
+    font-size: larger;
+    
+}
+.welcome a:hover{
+    border: solid 1px aliceblue;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgb(235, 198, 14);
+    transform: scale(1.1);
+}
+
+/* adminDashboard */
+.viewResturants, .viewUsers{
+    margin-left: 20px;
+}
+.viewResturants a, .viewUsers a{
+    text-decoration: none;
+    color: aliceblue;
+    padding: 10px 20px;
+    border: solid 1px aliceblue;
+    border-radius: 5px;
+    font-size: 20px;
+    border-radius: 20px;
+}
+.viewResturants a:hover, .viewUsers a:hover{
+    border: solid 1px aliceblue;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgb(235, 198, 14);
+    transform: scale(1.1);
+}
+.adminOptions{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+
+/* viewResturants */
+.restaurantinfowrapper, .userinfowrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    margin: 20px;
+}
+.restaurantinfo, .userinfo{
+    border: solid 1px aliceblue;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 40px;
+    
+}
+.restaurantinfocard, .userinfocard{
+    color: azure;
+    font-size: 20px;
+    width: 300px;
+    margin: 20px;
+    border: solid 1px aliceblue;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgb(235, 198, 14);
+}
+.resinfocardbut, .resinfocardbut{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+.resinfocardbut a, .resinfocardbut a{
+    text-decoration: none;
+    color: aliceblue;
+    padding: 10px 20px;
+    border: solid 1px aliceblue;
+    border-radius: 5px;
+    font-size: 20px;
+    border-radius: 20px;
+}
+.resinfocardbut a:hover, .resinfocardbut a:hover{
+    border: solid 1px aliceblue;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgb(235, 198, 14);
+    transform: scale(1.1);
 }
